--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev --port 7010",
+    "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -11,7 +11,7 @@
   "dependencies": {
     "@astrojs/netlify": "^6.5.9",
     "@tailwindcss/vite": "^4.1.18",
-    "astro": "^5.13.7",
+    "astro": "^5.17.1",
     "tailwindcss": "^4.1.18"
   }
 }
